Fix Synapse startup to always use synapse.xml system property for the XML location Fix path names (in config files) to be relative to SYNAPSE_HOME and make synapse start in it Remove unwanted dependencies e.g. Xalan
git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/synapse/trunk/java@408646 13f79535-47bb-0310-9956-ffa450edef68